--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       <h1>Syringomyelia 2025 Conference</h1>
       <p>Uniting Professionals, Patients, and Researchers</p>
       <!-- Button to scroll down to the Info section -->
-      <a href="#info-section" class="btn scroll-btn">Learn More</a>
+      <!-- From Uiverse.io by cssbuttons-io --> 
+<button class="learn-more" onclick="document.getElementById('info-section').scrollIntoView({ behavior: 'smooth' });">
+  <span class="circle" aria-hidden="true">
+  <span class="icon arrow"></span>
+  </span>
+  <span class="button-text">Learn More</span>
+</button>
     </div>
   </header>
 
